--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *,
@@ -98,6 +99,7 @@ body {
     margin-top: 166px;
     text-align: center;
     font-size: 32px;
+    font-weight: 400;
 }
 
 .header__title {
@@ -155,6 +157,7 @@ body {
     border: 1px solid transparent;
     border-radius: 0 0 45px 45px;
     overflow: hidden;
+    z-index: 1;
 }
 
 .offer::after {
@@ -252,7 +255,6 @@ body {
     overflow: hidden;
     position: relative;
     margin-top: -46px;
-    z-index: -1;
 }
 
 .about__text-first, .about__text-second {
@@ -289,7 +291,7 @@ body {
     margin-bottom: 100px;
 }
 
-.about__license-image {
+.about__license-image{
     border-radius: 20px;
     overflow: hidden;
 }
@@ -391,7 +393,74 @@ body {
 .footer__menu-link {
     margin-left: 40px;
 }
+/*                                          i-FRAME                                                                   */
+.pdf-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
 
+.pdf-modal-content {
+    width: 80%;
+    height: 80%;
+    background: #fff;
+    border-radius: 5px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+#pdf-iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
 
+#close-pdf-modal {
+    margin-top: 10px;
+}
+/*--------------------------------------------------------------------------------------------------------------------*/
+@media (max-width: 768px){
+    .container{
+        max-width: 643px;
+    }
+    .logo__img {
+        display: none;
+    }
+    .header__subtitle {
+        margin-top: 132px;
+    }
+    .header__title {
+        padding: 16px 0 208px;
+        font-size: 60px;
+    }
+    .header__top-inner {
+        min-height: 100px;
+    }
+    .menu__list {
+        display: flex;
+    }
+    .menu__list-item + .menu__list-item {
+        margin-left: 13px;
+    }
+    .menu__list-link {
+        font-size: 14px;
+    }
+    .menu__list-link:hover {
+        border-bottom: 1px solid #000;
+    }
+    .offer__inner {
+        margin: 70px auto;
+        max-width: 640px;
+        font-size: 25px;
+    }
+}
 
